--- a/client/src/components/ShowerImages/index.less
+++ b/client/src/components/ShowerImages/index.less
@@ -31,6 +31,14 @@
   grid-column-gap: var(--margin-base);
 }
 
+.image-multiple-six {
+  grid-template-columns: repeat(3, 180px);
+  grid-template-rows: repeat(2, 180px);
+
+  grid-row-gap: var(--margin-base);
+  grid-column-gap: var(--margin-base);
+}
+
 .image-multiple-nine {
   grid-template-columns: repeat(3, 180px);
   grid-template-rows: repeat(3, 180px);
