feat:(ListNode)列表新增故事墙样式

--- a/client/src/components/PageContent/base.less
+++ b/client/src/components/PageContent/base.less
@@ -43,6 +43,7 @@ page {
   --color-gray-5: #bdbdbd;
   --color-gray-6: #e0e0e0;
   --color-gray-7: #eeeeee;
+  --color-gray-8: #f0f0f0;
   --color-gray-9: #fafafa;
 
   --color-shadow: #bdbdbd;
