--- a/client/src/pages/PersonDetail/index.less
+++ b/client/src/pages/PersonDetail/index.less
@@ -1,8 +1,7 @@
-.personality-detail-wrap {
+.personality-detail-wrap-scroll {
   overflow: hidden;
   width: 100vw;
   height: 100vh;
-  display: flex;
   .detail-swiper-wrap {
     flex: 1 1 auto;
     width: 100%;
@@ -11,6 +10,20 @@
       box-sizing: border-box;
       width: 100%;
       height: 100%;
+      padding: 0 var(--padding-md);
+    }
+  }
+}
+
+.personality-detail-wrap {
+  width: 100vw;
+  .detail-swiper-wrap {
+    flex: 1 1 auto;
+    width: 100%;
+    // height: 100%;
+    .detail-swiper-item {
+      box-sizing: border-box;
+      width: 100%;
       padding: 0 var(--padding-md);
     }
   }
