feat:(PanelImageCropper)新增裁切图片面板组件

--- a/client/src/pages/AvatarShow/index.less
+++ b/client/src/pages/AvatarShow/index.less
@@ -1,17 +1,10 @@
 .avatar-show-wrap {
-	flex: 1;
-	height: 100vh;
-	background-color: var(--color-white, #ffffff);
+  flex: 1;
+  height: 100vh;
+  background-color: var(--color-white, #ffffff);
 
-	.avatar-show-bottom {
-		position: fixed;
-		left: 0;
-		right: 0;
-		bottom: 0;
-		background-color: transparent;
-		display: flex;
-		flex-direction: column;
-		justify-content: flex-start;
-		align-items: center;
-	}
+  .avatar-show-block {
+    width: 100%;
+    height: var(--margin-md);
+  }
 }
