--- a/client/src/pages/AvatarShow/components/ModuleJewelry/index.less
+++ b/client/src/pages/AvatarShow/components/ModuleJewelry/index.less
@@ -33,15 +33,17 @@
   .jewelry-content {
     box-sizing: border-box;
     width: 100%;
-    height: 150px;
-    white-space: nowrap;
+    // height: 150px;
     padding: 15px;
+    // flex-wrap: wrap;
+    white-space: nowrap;
 
     .jewelry-item {
       box-sizing: border-box;
       width: 120px;
       height: 120px;
       margin-right: var(--border-bold-space, 32px);
+      margin-bottom: var(--border-bold-space, 32px);
       border: 1px solid var(--color-shadow, #aaaaaa);
       display: inline-block;
 
@@ -54,7 +56,7 @@
         height: 100%;
 
         .content-text {
-          font-size: var(--f1);
+          font-size: var(--font-size-icon);
         }
       }
     }
