--- a/client/src/pages/PersonDetail/components/DetailContent/components/DetailInfo/index.less
+++ b/client/src/pages/PersonDetail/components/DetailContent/components/DetailInfo/index.less
@@ -6,20 +6,53 @@
       margin-top: 0;
     }
   }
+
   .info-avatar {
     width: 240px;
     height: 310px;
   }
+
   .info-name {
     margin-top: var(--margin-xs);
     font-size: var(--font-size-lg);
     color: var(--color-text-primary);
     text-align: center;
   }
+
   .info-job {
     margin-top: var(--margin-xs);
     font-size: var(--font-size-md);
     color: var(--color-text-secondary);
     text-align: center;
+  }
+
+  .info-form-item {
+    margin-top: var(--margin-md);
+    width: 100%;
+    font-size: var(--font-size-md);
+    color: var(--color-text-primary);
+    text-align: left;
+    align-items: flex-start;
+    &:first-child {
+      margin-top: 0;
+    }
+
+    .item-icon {
+      padding: var(--padding-mini);
+      margin-right: var(--margin-sm);
+      box-sizing: border-box;
+      flex: 0 0 40px;
+      width: 40px;
+      height: 40px;
+      border-radius: 50%;
+      background-color: var(--color-shadow);
+    }
+    .item-value {
+      word-wrap: break-word; /* 是否允许在单词内进行断句 */
+      word-break: break-all; /* 可以在任何位置断句 */
+    }
+    .item-enable {
+      color: var(--color-link-normal);
+    }
   }
 }
