feat(PersonDetail):调整人物详情页面支持可分享

--- a/client/src/pages/PersonDetail/components/DetailContent/index.less
+++ b/client/src/pages/PersonDetail/components/DetailContent/index.less
@@ -1,5 +1,5 @@
 .detail-content-wrap {
-  padding: var(--padding-md) 0;
+  padding: var(--padding-xs) 0;
   .detail-content-item {
     margin-top: var(--margin-md);
     &:first-child {
